--- a/src/sass/_upload.scss
+++ b/src/sass/_upload.scss
@@ -72,7 +72,7 @@
 
       &:focus {
         outline: none;
-        border: 1px solid $color-primary;
+        border: 1px solid var(--color-primary);
         background-color: $color-grey-light-1;
       }
     }
